package br.unitins.model;

public class RegistroPagamento extends DefaultEntity{
    
    private Boolean pago;

    public Boolean getPago() {
        return pago;
    }

    public void setPago(Boolean pago) {
        this.pago = pago;
    }

    
}
